# faraday-bivector-sdr

./: .gitignore  LICENSE  README.md  polmap.html  pyproject.toml  run_polmap_webui_2425.py  run_txrx_2425.py
env/: soapy_site.sh
examples/: basic_rx.yaml  beamforming.yaml  bladerf_rx_2425.yaml  fmcw.yaml  polarimetry_xy_to_rl.yaml  polmap_sim.yaml  rangedoppler.yaml  record_npz.yaml  soapy_bladerf.yaml  soapy_hackrf.yaml  soapy_hermes.yaml  soapy_plutosdr.yaml  timestamp_align.yaml  webui_sim.yaml
faraday_bivector_sdr/: ROADMAP.md  __init__.py
faraday_bivector_sdr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
faraday_bivector_sdr/adapters/: MEGADIAG_20260115_181240  MEGADIAG_latest
faraday_bivector_sdr/adapters/devices/: file_npz.py  sim.py  soapy.py
faraday_bivector_sdr/adapters/storage/: npz.py  zarr.py  zarr_stream.py
faraday_bivector_sdr/adapters/visualization/: html.py  html_polmap.py
faraday_bivector_sdr/application/: orchestrator.py
faraday_bivector_sdr/cli/: fbsdr.py
faraday_bivector_sdr/domain/: functionals.py  types.py
faraday_bivector_sdr/ports/: device.py  storage.py  timing.py
faraday_bivector_sdr/runtime/: control.py  engine.py  params.py  stream.py  taps.py  webui.py
tests/: test_beamforming.py  test_dechirp_local.py  test_dynamic_ops.py  test_fractional_delay.py  test_frequency_shift.py  test_npz_record_playback.py  test_orchestrator_pipeline_refs.py  test_polarization.py  test_polmap.py  test_range_doppler_offline.py  test_sim_pipeline.py  test_sync_alignment.py  test_taps_smoke.py  test_tee_and_align.py
(+17 files in other folders)
