[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faraday-bivector-sdr"
version = "0.4.0"
description = "A Faraday-bivector-centric SDR framework with hexagonal architecture."
requires-python = ">=3.9"
authors = [{name="Your Name"}]
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["faraday_bivector_sdr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
